Got this whole second activty thing working!

--- a/Ideas/res/menu/home.xml
+++ b/Ideas/res/menu/home.xml
@@ -10,8 +10,7 @@
         android:id="@+id/new_idea" 
         android:title="@string/new_idea" 
         android:orderInCategory="1" 
-        android:showAsAction="always" 
-        android:icon="@drawable/new_idea_dark"/>
+        android:showAsAction="always"/>
     
 
 </menu>
