--- a/Ideas/res/menu/new_idea.xml
+++ b/Ideas/res/menu/new_idea.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
     <item 
         android:id="@+id/new_idea" 
         android:title="@string/save_new_idea" 
         android:orderInCategory="1" 
-        android:icon="@drawable/save"></item>
+        android:showAsAction="always"/>
+    
+    <item 
+        android:id="@+id/discard_idea" 
+        android:title="@string/discard_new_idea" 
+        android:orderInCategory="1" 
+        android:showAsAction="always"/>
     
 
 </menu>
